<resources>
    <string name="app_name">Memorease</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="return_to_login">Return to Login</string>
    <string name="RegisterUser">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="userProfile">Profile</string>
    <string name="previousQuizzes">Last Quizzes</string>
    <string name="questions_mngmt">Questions Management</string>
    <string name="users_mngmt">Users Management</string>
    <string name="usersMngmt">Users Management</string>
    <string name="quizzesMngmt">Quizzes Management</string>
    <string name="homeActivity">Home</string>
    <string name="username">User Name</string>
    <string name="edit">Edit</string>
    <string name="select_picture">Take a Picture</string>
    <string name="saveUserProfile">Save Profile</string>
    <string name="profile_image_description">Image profile</string>
    <string name="fullname">Full name</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone number</string>
    <string name="bio">Bio</string>
    <string name="user_profile">User profile</string>
    <string name="userNameLabel">User name:</string>
    <string name="emailLabel">Email:</string>
    <string name="passwordLabel">Password:</string>
    <string name="confirmPasswordLabel">Confirm password:</string>
    <string name="fullnameLabel">Full name:</string>
    <string name="addressLabel">Address:</string>
    <string name="phoneNumberLabel">Phone number:</string>
    <string name="bioLabel">Bio:</string>
    <string name="filterQuestions">Filter questions:</string>
    <string name="subjectName">Subject name:</string>
    <string name="complexityLevel">Complexity level:</string>
    <string name="filterQuestions1">Apply</string>
    <string name="questionsList">"Questions: "</string>
    <string name="correct_answer_1_4">Correct Answer (1-4)</string>
    <string name="correct_answer">Correct Answer #:</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="enter_the_answers_and_the_correct_answer_number_1_4">Enter the answers and the correct answer number (1-4)</string>
    <string name="answers">Answers</string>
    <string name="question">Question</string>
    <string name="edit_question">Edit Question</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="answer_number_1">Question #1:</string>
    <string name="answer_number_2">Question #2:</string>
    <string name="answer_number_3">Question #3:</string>
    <string name="answer_number_4">Question #4:</string>
    <string name="setSubject">Select the subject:</string>
    <string name="setComplexityLevel">Set complexity level:</string>
    <string name="addNewQuiz">Add New Quiz</string>
    <string name="quizName">Quiz Name</string>
    <string name="quizDescription">Quiz Description</string>
<string name="addImage">Add Image</string>
    <string name="teacherID">Teacher ID:</string>
    <string name="subjectID">Subject ID:</string>
    <string name="addQuestions">Add Questions:</string>
    <string name="previous_quizzes">Previous Quizzes</string>
    <string name="no_previous_quizzes_saved">No Previous Quizzes Saved</string>

</resources>