<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ProfileActivity">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:titleTextColor="@android:color/white"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/image_layer"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_image_description"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/user_profile"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/userNameLabel"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/username"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/emailLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/passwordLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/confirmPasswordLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fullnameLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/fullname"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addressLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/address"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phoneNumberLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/phonenumber"
                android:inputType="phone"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bioLabel"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editTextBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/bio"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>

    <!-- ImageButton container with horizontal orientation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:gravity="end">

        <!-- ImageButton for selecting/taking a picture -->
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/buttonSelectPicture"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_background"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_picture"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/take_picture_icon"
                android:contentDescription="@string/select_picture"
                android:padding="2dp"/>
        </LinearLayout>

        <!-- ImageButton for saving user profile -->
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/buttonSaveUserProfile"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_background"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveUserProfile"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/save_icon"
                android:contentDescription="@string/saveUserProfile"
                android:padding="2dp"/>
        </LinearLayout>

        <!-- ImageButton for logout -->
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/buttonLogout"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_background"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/exit_icon"
                android:contentDescription="@string/logout"
                android:padding="2dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
