<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/memorease_logo_project" />

        <!-- Username EditText -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:padding="10dp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:padding="10dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <!-- Register Link -->
        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
