<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        tools:context=".QuizzesManagementActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@color/colorBackground"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:gravity="start"
                android:text="@string/addNewQuiz"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextQuizName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/quizName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextQuizDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/quizDescription"
                android:padding="10dp" />

            <Button
                android:id="@+id/buttonAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/addImage"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/imageViewQuizImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textViewTeacherID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/teacherID"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewTeacherIDValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="12345"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewSubjectID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/subjectID"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewSubjectIDValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="789"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your question here"
                android:padding="10dp" />

            <Button
                android:id="@+id/buttonAddQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/addQuestions"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textViewQuestionsListLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionsList"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:nestedScrollingEnabled="true"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/textViewQuestionsListLabel"
                android:divider="@drawable/divider"
                android:dividerHeight="1dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>